--- a/CarParts1/pom.xml
+++ b/CarParts1/pom.xml
@@ -26,11 +26,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.13.1</junit.version>
-		<cucumber.version>6.9.0</cucumber.version>
+		<cucumber.version>6.11.0</cucumber.version>
 	</properties>
 
-	<!-- Updated1 -->
 	<dependencies>
+	
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
@@ -41,6 +41,13 @@
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -53,41 +60,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-jvm-deps</artifactId>
+			<version>1.0.6</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>3.141.59</version>
 		</dependency>
-
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>1.2.6</version>
-			<!--<type>pom</type> -->
-		</dependency>
-
-		<!-- For running cucumber in jvm -->
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-jvm-deps</artifactId>
-			<version>1.0.5</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- For assertions -->
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.6</version>
-			<!-- <type>pom</type> <scope>test</scope> -->
-		</dependency>
-
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-picocontainer</artifactId>
-			<version>1.2.6</version>
-			<!-- <type>pom</type> <scope>test</scope> -->
-		</dependency>
-
 
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
@@ -95,14 +78,23 @@
 			<version>2.8.3</version>
 		</dependency>
 
+
+		<!-- For running cucumber in jvm -->
+		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-jvm-deps</artifactId> 
+			<version>1.0.5</version> <scope>provided</scope> </dependency> -->
+
+		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-java</artifactId> 
+			<version>1.2.6</version> <type>pom</type> </dependency> For assertions <dependency> 
+			<groupId>info.cukes</groupId> <artifactId>cucumber-junit</artifactId> <version>1.2.6</version> 
+			<type>pom</type> <scope>test</scope> </dependency> -->
+
+		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-picocontainer</artifactId> 
+			<version>1.2.6</version> <type>pom</type> <scope>test</scope> </dependency> -->
+
 		<!-- For cucumber reporting -->
 		<!-- <dependency> <groupId>com.vimalselvam</groupId> <artifactId>cucumber-extentsreport</artifactId> 
 			<version>3.1.1</version> </dependency> -->
 
-
-
 	</dependencies>
-
-
 
 </project>
