--- a/CarParts1/src/test/resources/extent.properties
+++ b/CarParts1/src/test/resources/extent.properties
@@ -1,13 +1,13 @@
 extent.reporter.spark.start=true
 extent.reporter.spark.out=test-output/SparkReport/Spark.html
-extent.reporter.spark.config=src/test/resource/extent-config.xml
+extent.reporter.spark.config=C:/Users/Tib/git/CarParts/CarParts1/src/test/resources/extent-config.xml
 
-extent.report.spark.out=test-output/SparkReport/
+extent.reporter.spark.out=test-output/SparkReport/
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=test output/PdfReport/Extent.Pdf.pdf
+extent.reporter.pdf.out=test-output/PdfReport/Extent.Pdf.pdf
 
 extent.reporter.spark.viewOrder=dashboard,test,category,author,device,log
 systeminfo.os=Win
